# ariel-rs

./: .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: backends.rs  error.rs  error_svg.rs  icons.rs  lib.rs  style.rs  svg.rs  text.rs  text_browser_metrics.rs  theme.rs
src/diagrams/: mod.rs  util.rs
src/diagrams/architecture/: constants.rs  mod.rs  parser.rs  renderer.rs  templates.rs
src/diagrams/block/: constants.rs  mod.rs  parser.rs  renderer.rs  templates.rs
src/diagrams/c4/: constants.rs  mod.rs  parser.rs  renderer.rs  templates.rs
src/diagrams/class_diagram/: constants.rs  mod.rs  parser.rs  renderer.rs  templates.rs
src/diagrams/cynefin/: constants.rs  mod.rs  parser.rs  renderer.rs  templates.rs
src/diagrams/er/: constants.rs  mod.rs  parser.rs  renderer.rs  templates.rs
src/diagrams/eventmodeling/: constants.rs  mod.rs  parser.rs  renderer.rs  templates.rs
src/diagrams/flowchart/: constants.rs  mod.rs  parser.rs  renderer.rs  templates.rs
visual-regression/: audit_colors.mjs  audit_comprehensive.json  audit_comprehensive.mjs  audit_fonts.mjs  audit_themes.mjs  check_all_cosmetics.mjs  check_concurrent.mjs  check_concurrent_content.mjs  check_div_pos.mjs  check_moving.mjs  check_moving2.mjs  check_moving3.mjs  check_moving4.mjs  check_ref.mjs  check_ref2.mjs  compare.mjs  compare_grammar.mjs  dagre_oracle.mjs  diff_audit.mjs  dims.mjs  gen_compare_all.mjs  gen_diff_images.mjs  gen_ref_no_html.mjs  grammar_svg_to_png.mjs  measure_chars_svg.mjs  measure_concurrent.mjs  measure_oracle.mjs  measure_state.mjs  mermaid_render.mjs  package-lock.json  package.json  pixel_diff.mjs  ref_dims.mjs  render_reference.mjs  render_rsvg.mjs  render_zenuml_ref.mjs  run_grammar_regression.mjs  run_regression_all.mjs  run_theme_regression.mjs  serve_grammar.mjs  (+23 more)
visual-regression/corpus/: corpus.json
visual-regression/grammar_corpus/: grammar_corpus.json
(+144 files in other folders)
