[package]
name = "ariel-rs"
version = "0.4.0"
edition = "2021"
description = "A faithful Rust port of Mermaid JS — headless SVG diagram rendering without a browser"
license = "MIT"
authors = ["Rochanglien Infimate"]
repository = "https://github.com/rinfimate/ariel-rs"
homepage = "https://github.com/rinfimate/ariel-rs"
documentation = "https://docs.rs/ariel-rs"
keywords = ["mermaid", "diagram", "svg", "rendering", "headless"]
categories = ["visualization", "graphics", "text-processing"]
readme = "README.md"
exclude = [
    "visual-regression/",
    ".github/hooks/",
    "src/bin/debug_dagre.rs",
]

[features]
# Enable Node.js-backed fidelity backends (BrowserMeasurer + DagreJsLayouter).
# Never enabled in release builds; only for diagnostic tooling.
fidelity = []

[[bin]]
name = "render_corpus"
path = "src/bin/render_corpus.rs"

[[bin]]
name = "fidelity_corpus"
path = "src/bin/fidelity_corpus.rs"
required-features = ["fidelity"]

[dependencies]
dagre-dgl-rs = "0.1.1"
ab_glyph = "0.2"
indexmap = "2"
serde_json = "1"
chrono = "0.4"

[dev-dependencies]
insta = "1"
